--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
                         placeholder="Search..."
                         type="text"
                     />
-
                     <button class="menu sbm" type="button">Search</button>
                 </div>
             </div>
         </header>
-        <button>qwwwwwwwwwwwwqw</button>
+        <div class="content">
+            <button class="point pet"></button>
+            <button class="point education"></button>
+            <button class="point clothes"></button>
+            <button class="point property__sale"></button>
+            <button class="point phone"></button>
+            <button class="point technique"></button>
+            <button class="point watch"></button>
+            <button class="point news"></button>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
